--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<a href="#" id="sidebar__event-switcher">Event Name<br><span>Switch Event</span></a>
 			<nav>
 				<ul>
-					<li class="active"><a href="#">Dashboard</a></li>
-					<li><a href="#">Event Plan</a></li>
+					<li class="active"><a href="/">Dashboard</a></li>
+					<li><a href="/event-plan.html">Event Plan</a></li>
 					<li><a href="#">Coordinator Plan</a></li>
 					<li><a href="#">DJ Plan</a></li>
 					<li><a href="#">Photo & Video Plan</a></li>
@@ -129,7 +129,8 @@
 			</ul>
 		</div>		
 	</footer>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="../node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
