--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<a href="#" id="sidebar__event-switcher">Event Name<br><span>Switch Event</span></a>
 			<nav>
 				<ul>
-					<li class="active"><a href="/">Dashboard</a></li>
-					<li><a href="/event-plan.html">Event Plan</a></li>
+					<li class="active"><a href="index.html">Dashboard</a></li>
+					<li><a href="event-plan.html">Event Plan</a></li>
 					<li><a href="#">Coordinator Plan</a></li>
 					<li><a href="#">DJ Plan</a></li>
 					<li><a href="#">Photo & Video Plan</a></li>
