--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 			</ul>
 		</div>		
 	</footer>
-	<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="../node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
+	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
