Fixed image path

--- a/event-plan.html
+++ b/event-plan.html
@@ -61,7 +61,7 @@
 									<p>Get started with the details of your event. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure asperiores temporibus quia omnis, dolor sit esse, vero assumenda nostrum at, delectus debitis mollitia culpa unde itaque impedit quaerat maiores.</p>
 									<div class="flex align-center">
 										<a href="#" class="button button--outline button--teal next">Let's Go</a>
-										<div class="press-enter">Press Enter <img src="/img/icon-enter.svg"></div>
+										<div class="press-enter">Press Enter <img src="img/icon-enter.svg"></div>
 									</div>
 									<div class="slide__nav">
 										<div>1/3</div>
